--- a/Online_recongition.ipynb
+++ b/Online_recongition.ipynb
@@ -52,7 +52,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!python offline_experiments.py --path \"/content\" --dataset \"OAD\"  --execution \"Classifier\"  --learning_epochs 1 --classification_epochs 5  --interpolation 200"
+        "!python offline_experiments.py --path \"/content\" --dataset \"UOW\"  --execution \"Classifier\"  --learning_epochs 1 --classification_epochs 5  --interpolation 200"
       ],
       "metadata": {
         "id": "iIOF9q0XiDN8"
